--- a/Subsatnce Abuse.Rmd
+++ b/Subsatnce Abuse.Rmd
@@ -5,58 +5,71 @@ date: '2022-07-20'
 output: html_document
 ---
 
-# Reading in data
+# Hypotheses 1: Understanding where most drug overdose deaths occur and some characteristics of those areas
 
-```{r}
+
+```{r include=FALSE, echo=FALSE}
 library(tidyverse)
-county_rankings <- read.csv("http://www.stat.cmu.edu/cmsac/sure/2022/materials/data/health/optum_projects/county_rankings.csv")
-overdoses <- read.csv("~/SURE-2022/Drug-Alcohol Overdose.csv")
-d3 <- read.csv("~/SURE-2022/VSRR_Provisional_Drug_Overdose_Death_Counts.csv")
+
+d3 <- read.csv("~/SURE-2022/Drug-Alcohol Overdose Deaths.csv")
+county_rankings <- read.csv("~/SURE-2022/county_rankings.csv")
 ```
 
-# Hypotheses 1
+```{r include=FALSE, echo=FALSE}
+# Cleaning the data
 
-__Understanding where most drug overdose deaths occur__
-
-```{r}
-d3 <- read.csv("~/SURE-2022/VSRR_Provisional_Drug_Overdose_Death_Counts.csv")
 d3$Data.Value <- as.integer(gsub(",", "", d3$Data.Value))
-```
 
-__Cleaning the data for the US map graph__
-
-```{r}
 d3 <- d3 %>%
+  arrange(State) %>%
   filter(Year %in% "2019",
-         Indicator %in% "Number of Drug Overdose Deaths") %>%
+         Indicator %in% "Number of Drug Overdose Deaths",
+         !State %in% c("DC", "YC", "US")) %>%
   select(State, Indicator, Data.Value) %>%
   group_by(State) %>%
-  summarise(avg_death = sum(Data.Value))
+  summarise(total_deaths = sum(Data.Value))
+
+colnames(d3)[1] <- 'state'
 ```
 
-__Plotting the average drug overdose deaths per state__
+```{r include=FALSE, echo=FALSE}
+county_rankings <- read.csv("~/SURE-2022/county_rankings.csv")
+
+county_rankings <- county_rankings %>%
+  arrange(State.Abbreviation) %>%
+  filter(County.FIPS.Code %in% 0,
+         !State.Abbreviation %in% c("US", "DC")) %>%
+  select(State.Abbreviation, Unemployment.raw.value, Some.college.raw.value, High.school.completion.raw.value)
+
+colnames(county_rankings)[1] <- 'state'
+```
 
 ```{r}
+# Combining the data
+
+library(dplyr)
+
+combined <- dplyr::left_join(x = d3, y = county_rankings, by = 'state')
+```
+
+__Plotting the total drug overdose deaths per state in 2019__
+
+```{r echo=FALSE}
 library(usmap)
 library(ggplot2)
 
-
-colnames(d3)[1] <- 'state'
-
-plot_usmap(data = d3, values = "avg_death", color = "red") + 
-  scale_fill_continuous(low = "yellow", high = "darkred", name = "Average Deaths", label = scales::comma) + 
+plot_usmap(data = combined, values = "total_deaths", color = "red") + 
+  scale_fill_continuous(low = "yellow", high = "darkred", name = "Total Deaths", label = scales::comma) + 
   theme(legend.position = "right")
 
 ```
 
 __Looking at the most used drug in California__
 
-```{r}
-d3 <- read.csv("~/SURE-2022/VSRR_Provisional_Drug_Overdose_Death_Counts.csv")
+```{r echo=FALSE}
+d3 <- read.csv("~/SURE-2022/Drug-Alcohol Overdose Deaths.csv")
 d3$Data.Value <- as.integer(gsub(",", "", d3$Data.Value))
-```
 
-```{r}
 d3 <- d3 %>%
   arrange(desc(Data.Value)) %>%
   filter(Year %in% "2019",
@@ -65,17 +78,15 @@ d3 <- d3 %>%
          State %in% "CA") %>%
   select(State, Indicator, Data.Value)
 
-head(d3)
+head(d3, 3)
 ```
 
 __Looking at the most used drug in Florida__
 
-```{r}
-d3 <- read.csv("~/SURE-2022/VSRR_Provisional_Drug_Overdose_Death_Counts.csv")
+```{r echo=FALSE}
+d3 <- read.csv("~/SURE-2022/Drug-Alcohol Overdose Deaths.csv")
 d3$Data.Value <- as.integer(gsub(",", "", d3$Data.Value))
-```
 
-```{r}
 d3 <- d3 %>%
   arrange(desc(Data.Value)) %>%
   filter(Year %in% "2019",
@@ -84,17 +95,15 @@ d3 <- d3 %>%
          State %in% "FL") %>%
   select(State, Indicator, Data.Value)
 
-head(d3)
+head(d3, 3)
 ```
 
 __Looking at the most used drug in Texas__
 
-```{r}
-d3 <- read.csv("~/SURE-2022/VSRR_Provisional_Drug_Overdose_Death_Counts.csv")
+```{r echo=FALSE}
+d3 <- read.csv("~/SURE-2022/Drug-Alcohol Overdose Deaths.csv")
 d3$Data.Value <- as.integer(gsub(",", "", d3$Data.Value))
-```
 
-```{r}
 d3 <- d3 %>%
   arrange(desc(Data.Value)) %>%
   filter(Year %in% "2019",
@@ -103,35 +112,31 @@ d3 <- d3 %>%
          State %in% "TX") %>%
   select(State, Indicator, Data.Value)
 
-head(d3)
+head(d3, 3)
 ```
 
 __Looking at the most used drug in Ohio__
 
-```{r}
-d3 <- read.csv("~/SURE-2022/VSRR_Provisional_Drug_Overdose_Death_Counts.csv")
+```{r echo=FALSE}
+d3 <- read.csv("~/SURE-2022/Drug-Alcohol Overdose Deaths.csv")
 d3$Data.Value <- as.integer(gsub(",", "", d3$Data.Value))
-```
 
-```{r}
 d3 <- d3 %>%
   arrange(desc(Data.Value)) %>%
   filter(Year %in% "2019",
          !Indicator %in% c("Percent with drugs specified", "Number of Deaths",
-                        "Number of Drug Overdose Deaths"),
+                           "Number of Drug Overdose Deaths"),
          State %in% "OH") %>%
   select(State, Indicator, Data.Value)
 
-head(d3)
+head(d3, 3)
 ```
 
-__Median Household Income__
+__Median Household Income By State__
 
-```{r}
-income <- read.csv("~/SURE-2022/csvData.csv")
-```
+```{r echo=FALSE}
+income <- read.csv("~/SURE-2022/MedianHouseholdIncome.csv")
 
-```{r}
 library(usmap)
 library(ggplot2)
 
@@ -147,73 +152,180 @@ plot_usmap(data = income, values = "HouseholdIncome", color = "red") +
 
 __Highschool Completion__
 
-```{r}
-county_rankings <- read.csv("http://www.stat.cmu.edu/cmsac/sure/2022/materials/data/health/optum_projects/county_rankings.csv")
-```
-
-```{r}
-county_rankings <- county_rankings %>%
-  filter(County.FIPS.Code %in% 0,
-         !State.Abbreviation %in% c("US", "DC")) %>%
-  select(Name, High.school.completion.raw.value)
-  
-county_rankings
-
-```
-
-```{r}
+```{r echo=FALSE}
 library(usmap)
 library(ggplot2)
 
-
-colnames(county_rankings)[1] <- 'state'
-
-plot_usmap(data = county_rankings, values = "High.school.completion.raw.value", color = "red") + 
+plot_usmap(data = combined, values = "High.school.completion.raw.value",
+           color = "red") + 
   scale_fill_continuous(low = "yellow", high = "darkred", name = "HS Completion %", label = scales::comma) + 
   theme(legend.position = "right")
-
 ```
 
+__Unemployment Rate by State__
 
-__HS completion by county in CA__
-
-```{r}
-county_rankings <- read.csv("http://www.stat.cmu.edu/cmsac/sure/2022/materials/data/health/optum_projects/county_rankings.csv")
-```
-
-```{r}
-county_rankings <- county_rankings %>%
-  filter(!County.FIPS.Code %in% 0) %>%
-  select(County.FIPS.Code, Name, High.school.completion.raw.value)
-  
-county_rankings
-
-```
-
-```{r}
+```{r echo=FALSE}
 library(usmap)
 library(ggplot2)
 
-
-colnames(county_rankings)[1] <- 'fips'
-
-plot_usmap(regions = "counties",
-           data = county_rankings,
-           values = "High.school.completion.raw.value",
-           color = "red") +
-  scale_fill_continuous(low = "yellow", high = "darkred", name = "HS Completion %", label = scales::comma) +
+plot_usmap(data = combined, values = "Unemployment.raw.value",
+           color = "red") + 
+  scale_fill_continuous(low = "yellow", high = "darkred", name = "Unemployment %", label = scales::comma) + 
   theme(legend.position = "right")
+```
+
+__College Experience__
+
+```{r echo=FALSE}
+library(usmap)
+library(ggplot2)
+
+plot_usmap(data = combined, values = "Some.college.raw.value",
+           color = "red") + 
+  scale_fill_continuous(low = "yellow", high = "darkred", name = "College Experience %", label = scales::comma) + 
+  theme(legend.position = "right")
+```
+
+_Clustering of Total deaths by the socioeconomic factors__
+
+```{r echo=FALSE}
+init_kmeans <- 
+  kmeans(dplyr::select(combined,
+                       total_deaths, Unemployment.raw.value),
+         algorithm = "Lloyd", centers = 3,
+         nstart = 1)
+
+combined %>%
+  mutate(state_clusters = 
+           as.factor(init_kmeans$cluster)) %>%
+  ggplot(aes(x = total_deaths, y = Unemployment.raw.value,
+             color = state_clusters)) +
+  geom_point() + 
+  ggthemes::scale_color_colorblind() +
+  theme_bw() +
+  theme(legend.position = "bottom")
+```
+
+```{r echo=FALSE}
+init_kmeans <- 
+  kmeans(dplyr::select(combined,
+                       total_deaths, Some.college.raw.value),
+         algorithm = "Lloyd", centers = 3,
+         nstart = 1)
+
+combined %>%
+  mutate(state_clusters = 
+           as.factor(init_kmeans$cluster)) %>%
+  ggplot(aes(x = total_deaths, y = Some.college.raw.value,
+             color = state_clusters)) +
+  geom_point() + 
+  ggthemes::scale_color_colorblind() +
+  theme_bw() +
+  theme(legend.position = "bottom")
+```
+
+```{r echo=FALSE}
+init_kmeans <- 
+  kmeans(dplyr::select(combined,
+                       total_deaths, High.school.completion.raw.value),
+         algorithm = "Lloyd", centers = 3,
+         nstart = 1)
+
+combined %>%
+  mutate(state_clusters = 
+           as.factor(init_kmeans$cluster)) %>%
+  ggplot(aes(x = total_deaths, y = High.school.completion.raw.value,
+             color = state_clusters)) +
+  geom_point() + 
+  ggthemes::scale_color_colorblind() +
+  theme_bw() +
+  theme(legend.position = "bottom")
+```
+
+__Clustering with the standardized variables__
+
+```{r echo=FALSE}
+combined <- combined %>%
+  mutate(std_death = as.numeric(scale(total_deaths, center = TRUE, scale = TRUE)),
+         std_unemploy = as.numeric(scale(Unemployment.raw.value, center = TRUE, scale = TRUE)),
+         std_hs = as.numeric(scale(High.school.completion.raw.value, center = TRUE, scale = TRUE)),
+         std_college = as.numeric(scale(Some.college.raw.value, center = TRUE, scale = TRUE)))
+```
+
+```{r echo=FALSE}
+std_kmeans <- 
+  kmeans(dplyr::select(combined, std_death, std_unemploy),
+         algorithm = "Lloyd", centers = 4, nstart = 1)
+
+combined %>%
+  mutate(state_clusters = 
+           as.factor(std_kmeans$cluster)) %>%
+  ggplot(aes(x = std_death, y = std_unemploy,
+             color = state_clusters)) +
+  geom_point() + 
+  ggthemes::scale_color_colorblind() +
+  theme_bw() +
+  theme(legend.position = "bottom") +
+  coord_fixed()
 
 ```
 
+```{r echo=FALSE}
+std_kmeans <- 
+  kmeans(dplyr::select(combined, std_death, std_hs),
+         algorithm = "Lloyd", centers = 4, nstart = 1)
 
+combined %>%
+  mutate(state_clusters = 
+           as.factor(std_kmeans$cluster)) %>%
+  ggplot(aes(x = std_death, y = std_hs,
+             color = state_clusters)) +
+  geom_point() + 
+  ggthemes::scale_color_colorblind() +
+  theme_bw() +
+  theme(legend.position = "bottom") +
+  coord_fixed()
 
+```
 
+```{r echo=FALSE}
+std_kmeans <- 
+  kmeans(dplyr::select(combined, std_death, std_college),
+         algorithm = "Lloyd", centers = 4, nstart = 1)
 
+combined %>%
+  mutate(state_clusters = 
+           as.factor(std_kmeans$cluster)) %>%
+  ggplot(aes(x = std_death, y = std_college,
+             color = state_clusters)) +
+  geom_point() + 
+  ggthemes::scale_color_colorblind() +
+  theme_bw() +
+  theme(legend.position = "bottom") +
+  coord_fixed()
 
+```
 
+__Model Based Clustering__
 
+```{r echo=FALSE, include=FALSE}
+library(mclust)
 
+death_college_clust <- Mclust(dplyr::select(combined, total_deaths, Some.college.raw.value))
 
+death_unemploy_clust <- Mclust(dplyr::select(combined, total_deaths, Unemployment.raw.value))
 
+death_hs_clust <- Mclust(dplyr::select(combined, total_deaths, High.school.completion.raw.value))
+```
 
+```{r echo=FALSE}
+plot(death_college_clust, what = 'classification')
+```
+
+```{r echo=FALSE}
+plot(death_hs_clust, what = 'classification')
+```
+
+```{r echo=FALSE}
+plot(death_unemploy_clust, what = 'classification')
+```
