--- a/Subsatnce Abuse.Rmd
+++ b/Subsatnce Abuse.Rmd
@@ -21,6 +21,7 @@ Median Household Income
 ```{r include=FALSE, echo=FALSE}
 library(tidyverse)
 
+d1 <- read.csv("~/SURE-2022/ODbyRace.csv")
 d3 <- read.csv("~/SURE-2022/Drug-Alcohol Overdose Deaths.csv")
 county_rankings <- read.csv("~/SURE-2022/county_rankings.csv")
 income <- read.csv("~/SURE-2022/MedianHouseholdIncome.csv")
@@ -143,14 +144,17 @@ __Looking at the most used drug in California__
 ```{r echo=FALSE}
 d3 <- read.csv("~/SURE-2022/Drug-Alcohol Overdose Deaths.csv")
 d3$Data.Value <- as.integer(gsub(",", "", d3$Data.Value))
+d3[is.na(d3)] = 0
 
 d3 <- d3 %>%
-  arrange(desc(Data.Value)) %>%
   filter(Year %in% "2019",
          !Indicator %in% c("Percent with drugs specified", "Number of Deaths",
                         "Number of Drug Overdose Deaths"),
          State %in% "CA") %>%
-  select(State, Indicator, Data.Value)
+  select(State, Indicator, Data.Value) %>%
+  group_by(State, Indicator) %>%
+  summarise(Data.Value = sum(Data.Value)) %>%
+  arrange(desc(Data.Value))
 
 head(d3, 3)
 ```
@@ -160,14 +164,17 @@ __Looking at the most used drug in Florida__
 ```{r echo=FALSE}
 d3 <- read.csv("~/SURE-2022/Drug-Alcohol Overdose Deaths.csv")
 d3$Data.Value <- as.integer(gsub(",", "", d3$Data.Value))
+d3[is.na(d3)] = 0
 
 d3 <- d3 %>%
-  arrange(desc(Data.Value)) %>%
   filter(Year %in% "2019",
          !Indicator %in% c("Percent with drugs specified", "Number of Deaths",
                         "Number of Drug Overdose Deaths"),
          State %in% "FL") %>%
-  select(State, Indicator, Data.Value)
+  select(State, Indicator, Data.Value) %>%
+  group_by(State, Indicator) %>%
+  summarise(Data.Value = sum(Data.Value)) %>%
+  arrange(desc(Data.Value))
 
 head(d3, 3)
 ```
@@ -177,14 +184,17 @@ __Looking at the most used drug in Texas__
 ```{r echo=FALSE}
 d3 <- read.csv("~/SURE-2022/Drug-Alcohol Overdose Deaths.csv")
 d3$Data.Value <- as.integer(gsub(",", "", d3$Data.Value))
+d3[is.na(d3)] = 0
 
 d3 <- d3 %>%
-  arrange(desc(Data.Value)) %>%
   filter(Year %in% "2019",
          !Indicator %in% c("Percent with drugs specified", "Number of Deaths",
                         "Number of Drug Overdose Deaths"),
          State %in% "TX") %>%
-  select(State, Indicator, Data.Value)
+  select(State, Indicator, Data.Value) %>%
+  group_by(State, Indicator) %>%
+  summarise(Data.Value = sum(Data.Value)) %>%
+  arrange(desc(Data.Value))
 
 head(d3, 3)
 ```
@@ -194,14 +204,17 @@ __Looking at the most used drug in Ohio__
 ```{r echo=FALSE}
 d3 <- read.csv("~/SURE-2022/Drug-Alcohol Overdose Deaths.csv")
 d3$Data.Value <- as.integer(gsub(",", "", d3$Data.Value))
+d3[is.na(d3)] = 0
 
 d3 <- d3 %>%
-  arrange(desc(Data.Value)) %>%
   filter(Year %in% "2019",
          !Indicator %in% c("Percent with drugs specified", "Number of Deaths",
-                           "Number of Drug Overdose Deaths"),
+                        "Number of Drug Overdose Deaths"),
          State %in% "OH") %>%
-  select(State, Indicator, Data.Value)
+  select(State, Indicator, Data.Value) %>%
+  group_by(State, Indicator) %>%
+  summarise(Data.Value = sum(Data.Value)) %>%
+  arrange(desc(Data.Value))
 
 head(d3, 3)
 ```
@@ -220,6 +233,7 @@ combined %>%
            as.factor(init_kmeans$cluster)) %>%
   ggplot(aes(x = total_deaths, y = Unemployment.raw.value,
              color = state_clusters)) +
+  labs(title = "Unemployment Rate by Deaths") +
   geom_point() + 
   ggthemes::scale_color_colorblind() +
   theme_bw() +
@@ -282,10 +296,13 @@ combined %>%
            as.factor(std_kmeans$cluster)) %>%
   ggplot(aes(x = std_death, y = std_unemploy,
              color = state_clusters)) +
+  labs(x = "Total Deaths", y = "Unemployment Rate",
+       title = "Cluster of Deaths and Unemployment Rate") +
   geom_point() + 
   ggthemes::scale_color_colorblind() +
   theme_bw() +
-  theme(legend.position = "bottom") +
+  theme(legend.position = "bottom",
+        plot.title = element_text(hjust = 0.5)) +
   coord_fixed()
 
 ```
@@ -300,10 +317,13 @@ combined %>%
            as.factor(std_kmeans$cluster)) %>%
   ggplot(aes(x = std_death, y = std_hs,
              color = state_clusters)) +
+  labs(x = "Total Deaths", y = "HS Completion",
+       title = "Cluster of Deaths and HS Completion Rate") +
   geom_point() + 
   ggthemes::scale_color_colorblind() +
   theme_bw() +
-  theme(legend.position = "bottom") +
+  theme(legend.position = "bottom",
+        plot.title = element_text(hjust = 0.5)) +
   coord_fixed()
 
 ```
@@ -350,5 +370,135 @@ plot(death_hs_clust, what = 'classification')
 plot(death_unemploy_clust, what = 'classification')
 ```
 
+
+```{r}
+opioid_by_race <- read.csv("~/SURE-2022/ODbyRace.csv")
+opioid_by_age <- read.csv("~/SURE-2022/ODbyAge.csv")
+opioid_by_sex <- read.csv("~/SURE-2022/ODbyGender.csv")
+opioid_by_type <- read.csv("~/SURE-2022/ODbyType.csv")
+```
+
+```{r echo=FALSE, include=FALSE}
+colnames(opioid_by_age)[1] <- 'State'
+colnames(opioid_by_age)[2] <- '0-24'
+colnames(opioid_by_age)[3] <- '25-34'
+colnames(opioid_by_age)[4] <- '35-44'
+colnames(opioid_by_age)[5] <- '45-54'
+colnames(opioid_by_age)[6] <- '55+'
+colnames(opioid_by_age)[7] <- 'Age.Total'
+
+opioid_by_age$`0-24` <- as.integer(gsub(",", "", opioid_by_age$`0-24`))
+opioid_by_age$`25-34` <- as.integer(gsub(",", "", opioid_by_age$`25-34`))
+opioid_by_age$`35-44` <- as.integer(gsub(",", "", opioid_by_age$`35-44`))
+opioid_by_age$`45-54` <- as.integer(gsub(",", "", opioid_by_age$`45-54`))
+opioid_by_age$`55+` <- as.integer(gsub(",", "", opioid_by_age$`55+`))
+opioid_by_age$Age.Total <- as.integer(gsub(",", "", opioid_by_age$Age.Total))
+
+opioid_by_age$`0-24`<-as.numeric(opioid_by_age$`0-24`)
+opioid_by_age$`25-34`<-as.numeric(opioid_by_age$`25-34`)
+opioid_by_age$`35-44`<-as.numeric(opioid_by_age$`35-44`)
+opioid_by_age$`45-54`<-as.numeric(opioid_by_age$`45-54`)
+opioid_by_age$`55+`<-as.numeric(opioid_by_age$`55+`)
+opioid_by_age$Age.Total<-as.numeric(opioid_by_age$Age.Total)
+```
+
+```{r echo=FALSE, include=FALSE}
+colnames(opioid_by_type)[1] <- 'State'
+
+opioid_by_type$Natural.and.Semisynthetic.Opioids..e.g..oxycodone..hydrocodone. <- as.integer(gsub(",", "", opioid_by_type$Natural.and.Semisynthetic.Opioids..e.g..oxycodone..hydrocodone.))
+opioid_by_type$Synthetic.Opioids..other.than.Methadone..e.g..fentanyl..tramadol. <- as.integer(gsub(",", "", opioid_by_type$Synthetic.Opioids..other.than.Methadone..e.g..fentanyl..tramadol.))
+opioid_by_type$Methadone <- as.integer(gsub(",", "", opioid_by_type$Methadone))
+opioid_by_type$Heroin <- as.integer(gsub(",", "", opioid_by_type$Heroin))
+
+opioid_by_type$Natural.and.Semisynthetic.Opioids..e.g..oxycodone..hydrocodone.<-as.numeric(opioid_by_type$Natural.and.Semisynthetic.Opioids..e.g..oxycodone..hydrocodone.)
+opioid_by_type$Synthetic.Opioids..other.than.Methadone..e.g..fentanyl..tramadol.<-as.numeric(opioid_by_type$Synthetic.Opioids..other.than.Methadone..e.g..fentanyl..tramadol.)
+opioid_by_type$Methadone<-as.numeric(opioid_by_type$Methadone)
+opioid_by_type$Heroin<-as.numeric(opioid_by_type$Heroin)
+```
+
+```{r echo=FALSE, include=FALSE}
+colnames(opioid_by_sex)[1] <- 'State'
+colnames(opioid_by_sex)[4] <- 'Sex.Total'
+```
+
+```{r echo=FALSE, include=FALSE}
+colnames(opioid_by_race)[1] <- 'State'
+colnames(opioid_by_race)[6] <- 'Ethnicity.Total'
+opioid_by_race <- opioid_by_race %>%
+  mutate(Black..Non.Hispanic = fct_recode(Black..Non.Hispanic,
+                                          "0" = "N/A"),
+         Hispanic = fct_recode(Hispanic, "0" = "N/A"),
+         Other = fct_recode(Other, "0" = "N/A"))
+
+opioid_by_race$Black..Non.Hispanic<-as.numeric(opioid_by_race$Black..Non.Hispanic)
+opioid_by_race$White..Non.Hispanic<-as.numeric(opioid_by_race$White..Non.Hispanic)
+opioid_by_race$Hispanic<-as.numeric(opioid_by_race$Hispanic)
+opioid_by_race$Other<-as.numeric(opioid_by_race$Other)
+opioid_by_race$Ethnicity.Total<-as.numeric(opioid_by_race$Ethnicity.Total)
+```
+
+```{r}
+o1 <- dplyr::left_join(x = opioid_by_age, y = opioid_by_race, by = 'State')
+o2 <- dplyr::left_join(x = o1, y = opioid_by_sex, by = 'State')
+opioid <- dplyr::left_join(x = o2, y = opioid_by_type, by = 'State')
+```
+
+```{r}
+opioid <- opioid %>%
+  filter(!State %in% "United States")
+```
+
+```{r echo=FALSE}
+init_kmeans <- 
+  kmeans(dplyr::select(opioid, Natural.and.Semisynthetic.Opioids..e.g..oxycodone..hydrocodone., Synthetic.Opioids..other.than.Methadone..e.g..fentanyl..tramadol.),
+         algorithm = "Lloyd", centers = 3,
+         nstart = 1)
+
+opioid %>%
+  mutate(state_clusters = 
+           as.factor(init_kmeans$cluster)) %>%
+  ggplot(aes(x = Natural.and.Semisynthetic.Opioids..e.g..oxycodone..hydrocodone., y = Synthetic.Opioids..other.than.Methadone..e.g..fentanyl..tramadol.,
+             color = state_clusters)) +
+  labs(title = "Opioid OD by States") +
+  geom_point() + 
+  ggthemes::scale_color_colorblind() +
+  theme_bw() +
+  theme(legend.position = "bottom")
+```
+
+```{r}
+opioid <- opioid %>%
+  mutate(std_natural = as.numeric(scale(Natural.and.Semisynthetic.Opioids..e.g..oxycodone..hydrocodone., center = TRUE, scale = TRUE)),
+         std_synthetic = as.numeric(scale(Synthetic.Opioids..other.than.Methadone..e.g..fentanyl..tramadol., center = TRUE, scale = TRUE)))
+```
+
+```{r echo=FALSE}
+std_kmeans <- 
+  kmeans(dplyr::select(opioid, std_natural, std_synthetic),
+         algorithm = "Lloyd", centers = 3, nstart = 1)
+
+opioid %>%
+  mutate(state_clusters = 
+           as.factor(std_kmeans$cluster)) %>%
+  ggplot(aes(x = std_natural, y = std_synthetic,
+             color = state_clusters)) +
+  labs(x = "Natural Opioids", y = "Synthetic Opioids",
+       title = "Cluster of Natural and Synthethis Opioids") +
+  geom_point() + 
+  ggthemes::scale_color_colorblind() +
+  theme_bw() +
+  theme(legend.position = "bottom",
+        plot.title = element_text(hjust = 0.5)) +
+  coord_fixed()
+
+```
+
+```{r echo=FALSE, include=FALSE}
+n_s_clust <- Mclust(dplyr::select(opioid, Natural.and.Semisynthetic.Opioids..e.g..oxycodone..hydrocodone., Synthetic.Opioids..other.than.Methadone..e.g..fentanyl..tramadol.))
+```
+
+```{r echo=FALSE}
+plot(n_s_clust, what = 'classification')
+```
 
 
